Create Swagger Documentation for Users
